--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "lint": "eslint '*/**/*.{js,jsx,ts,tsx}' --quiet",
+    "format": "prettier --write '*/**/*.{js,jsx,ts,tsx,json,css,md}'",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -39,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "prettier": "^3.2.5"
   }
 }
